[backend] Refine report generate service (#964)
* [backend] Extract Kanban service and Pipeline services

* [backend] Add testing for reportService

* [backend] Add testing for reportService

* ADM-739:[backend]refactor:move initialization forward and clear logic

* [backend] Add more testing for reportService

* ADM-739:[backend]refactor:refactor code

* ADM-739:[backend]refactor:use constant to replace validity time

* ADM-739:[backend]refactor:fix tests

* ADM-739:[backend]refactor:delete unused code

* ADM-739:[backend]refactor:decrease the call of fetch original data

* [backend] finish testing for reportService

* [backend] rebase main

* [backend] Extract Kanban service and Pipeline services

* [backend] Add testing for reportService

* ADM-739:[backend]test:optimize report controller tests

* ADM-739:[backend]refactor:format tests

* ADM-739:[backend]test:add Utils tests

* ADM-739:[backend]test:add Utils tests

* ADM-739:[backend]test:add Utils tests

* [backend] Add test for KanbanCsv

* ADM-739:[backend]test:add Utils tests

* [backend] finish test for KanbanCsvService

* ADM-739:[backend]test:fix tests and should consider the fields is null

* ADM-739: [backend]test:add test for missed branch in CSVFileGeneratorTest

* ADM-739: [backend]refactor:format code

* ADM-739: [backend]test:add tests for missed code line in KanbanCsvServiceTest

* [backend] finish test for KanbanCsvService

* [backend] improve test coverage

* ADM-739: [backend]test:add tests for missed code line in KanbanCsvServiceTest

* [backend] improve test coverage to 100%

* ADM-739:[backend]refactor:use explicit variable type

* [backend] fix codacy issues

---------

Co-authored-by: Jianxun.Ma <jianxun.ma@rea-group.com>
Co-authored-by: Yunsong <Mikeyangyun@gmail.com>
Co-authored-by: Shiqi Yuan <shiqi.yuan@thoughtworks.com>
Co-authored-by: guzhongren <guzhongren@live.cn>